--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,8 @@
     <dimen name="elevation_high">12dp</dimen>
     <dimen name="status_bar_height">25dp</dimen>
 
+    <dimen name="mb_height_56">56dp</dimen>
+
 
     <dimen name="fab_compat_margin">16dp</dimen>
 </resources>
