--- a/app/src/main/res/layout/mychronometer_layout.xml
+++ b/app/src/main/res/layout/mychronometer_layout.xml
@@ -1,41 +1,15 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".activities.MainMenuActivity">
-
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-
-        </android.support.design.widget.AppBarLayout>
-    </android.support.design.widget.CoordinatorLayout>
+    android:orientation="vertical">
 
     <LinearLayout
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -50,7 +24,7 @@
                 android:orientation="vertical">
 
                 <Chronometer
-                    android:id="@+id/chronometer"
+                    android:id="@+id/mychronometer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -182,12 +156,5 @@
                 android:visibility="gone" />
 
         </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/mymap"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"/>
     </LinearLayout>
-
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
