--- a/app/src/main/res/layout/fragment_location_info.xml
+++ b/app/src/main/res/layout/fragment_location_info.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
 <com.google.android.gms.maps.MapView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="com.google.android.gms.maps.MapFragment"
@@ -6,3 +11,4 @@
     android:layout_height="match_parent"
     android:id="@+id/mapView"
     class="com.google.android.gms.maps.MapFragment"/>
+</LinearLayout>
