--- a/app/src/main/res/layout/running_activity_layout.xml
+++ b/app/src/main/res/layout/running_activity_layout.xml
@@ -110,17 +110,37 @@
         android:fillViewport="true"
         custom:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <!--<android.support.v4.widget.NestedScrollView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:orientation="vertical">-->
 
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_gravity="fill_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    custom:cardCornerRadius="0dp"
+                    custom:cardElevation="5dp"
+                    custom:cardUseCompatPadding="true">
+
+                    <!--<FrameLayout-->
+                        <!--android:id="@+id/chrono_fragment"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:fitsSystemWindows="true">-->
+
+                    <!--</FrameLayout>-->
+
+                    <include
+                        android:id="@+id/mychronometerLayout"
+                        layout="@layout/mychronometer_layout"></include>
+
+                </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
@@ -132,29 +152,15 @@
                     <FrameLayout
                         android:id="@+id/map_fragment"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:fitsSystemWindows="true">
 
                     </FrameLayout>
 
                 </android.support.v7.widget.CardView>
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    custom:cardCornerRadius="0dp"
-                    custom:cardElevation="5dp"
-                    custom:cardUseCompatPadding="true">
 
-                    <FrameLayout
-                        android:id="@+id/chrono_fragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fitsSystemWindows="true">
-
-                    </FrameLayout>
-                </android.support.v7.widget.CardView>
 
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
+        <!--</android.support.v4.widget.NestedScrollView>-->
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
