--- a/app/src/main/res/layout/running_activity_layout.xml
+++ b/app/src/main/res/layout/running_activity_layout.xml
@@ -149,13 +149,19 @@
                     custom:cardElevation="5dp"
                     custom:cardUseCompatPadding="true">
 
-                    <FrameLayout
+                    <!--<FrameLayout-->
+                        <!--android:id="@+id/map_fragment"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:fitsSystemWindows="true">-->
+
+                    <!--</FrameLayout>-->
+
+                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                         android:id="@+id/map_fragment"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fitsSystemWindows="true">
-
-                    </FrameLayout>
+                        android:layout_height="match_parent"
+                        class="com.google.android.gms.maps.SupportMapFragment" />
 
                 </android.support.v7.widget.CardView>
 
