Aggiunta autenticazione con google tramite firebase
capire come usare firebase

il bd di firebase ancora accetta insert anonimi

--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -46,8 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/mainmenu_header"
         app:menu="@menu/mainmenu_drawer"
         />
-
+    <!--app:headerLayout="@layout/mainmenu_header"-->
 </android.support.v4.widget.DrawerLayout>
