--- a/app/src/main/res/layout/myExcursionPanel_layout.xml
+++ b/app/src/main/res/layout/myExcursionPanel_layout.xml
@@ -50,7 +50,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/id_kcal_text"
+                            android:id="@+id/id_altitude"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -62,7 +62,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="calorie (Kcal)"
+                            android:text="altitudine"
                             android:textColor="@color/mySecondary_text"
                             android:textSize="10sp" />
 
@@ -75,7 +75,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/id_km_text"
+                            android:id="@+id/id_lat_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -84,12 +84,13 @@
                             android:textSize="30sp" />
 
                         <TextView
+                            android:id="@+id/id_lon_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="distanza (Km)"
-                            android:textColor="@color/mySecondary_text"
-                            android:textSize="10sp" />
+                            android:text="value"
+                            android:textColor="@color/myPrimary_text_light"
+                            android:textSize="30sp" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
