--- a/app/src/main/res/layout/myexcursion_panel_layout.xml
+++ b/app/src/main/res/layout/myexcursion_panel_layout.xml
@@ -23,20 +23,20 @@
                 android:layout_gravity="center"
                 android:orientation="vertical">
 
-                <Chronometer
-                    android:id="@+id/mychronometer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textSize="40sp"/>
+                <!--<Chronometer-->
+                    <!--android:id="@+id/mychronometer"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:textSize="40sp"/>-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="durata"
-                    android:textColor="@color/mySecondary_text"
-                    android:textSize="12sp" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:text="durata"-->
+                    <!--android:textColor="@color/mySecondary_text"-->
+                    <!--android:textSize="12sp" />-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -51,21 +51,21 @@
 
 
                         <TextView
-                            android:id="@+id/id_altitude"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Latitudine"
+                            android:textColor="@color/mySecondary_text"
+                            android:textSize="15sp" />
+                        <TextView
+                            android:id="@+id/id_lat_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:text="value"
                             android:textColor="@color/myPrimary_text_light"
-                            android:textSize="30sp" />
+                            android:textSize="22sp" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="altitudine"
-                            android:textColor="@color/mySecondary_text"
-                            android:textSize="10sp" />
 
                     </LinearLayout>
 
@@ -75,48 +75,51 @@
                         android:layout_weight="1"
                         android:orientation="vertical">
 
-                        <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Longitudine"
+                            android:textColor="@color/mySecondary_text"
+                            android:textSize="15sp" />
+                        <TextView
+                            android:id="@+id/id_lon_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="value"
+                            android:textColor="@color/myPrimary_text_light"
+                            android:textSize="22sp"/>
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:text="Lat"
-                                android:layout_marginRight="5dp"
-                                android:textColor="@color/myPrimary_text_light"
-                                android:textSize="20sp" />
+                                android:text="Altitudine"
+                                android:textColor="@color/mySecondary_text"
+                                android:textSize="15sp" />
                             <TextView
-                                android:id="@+id/id_lat_text"
+                                android:id="@+id/id_altitude"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:text="value"
                                 android:textColor="@color/myPrimary_text_light"
-                                android:textSize="20sp" />
-                        </LinearLayout>
-                        <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="Lon"
-                                android:layout_marginRight="5dp"
-                                android:textColor="@color/myPrimary_text_light"
-                                android:textSize="20sp" />
-                            <TextView
-                                android:id="@+id/id_lon_text"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="value"
-                                android:textColor="@color/myPrimary_text_light"
-                                android:textSize="20sp" />
-                        </LinearLayout>
+                                android:textSize="22sp" />
+
+
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -128,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:paddingBottom="10dp"
             android:paddingTop="10dp">
 
@@ -139,6 +142,13 @@
                 android:layout_height="wrap_content"
                 android:background="@color/greenA700"
                 android:text="START"
+                android:textColor="@color/White" />
+            <Button
+                android:id="@+id/bearing_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/pink500"
+                android:text="Bearing"
                 android:textColor="@color/White" />
 
             <Button
