--- a/app/src/main/res/layout/myexcursion_panel_layout.xml
+++ b/app/src/main/res/layout/myexcursion_panel_layout.xml
@@ -145,6 +145,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="22sp"/>
+            <TextView
+                android:id="@+id/navigation_bearing"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"/>
+            <TextView
+                android:id="@+id/manual_bearing"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"/>
+            <TextView
+                android:id="@+id/rotation_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"/>
 
             <Button
                 android:id="@+id/big_start_button"
