--- a/app/src/main/res/layout/excursion_layout_activity.xml
+++ b/app/src/main/res/layout/excursion_layout_activity.xml
@@ -5,103 +5,64 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/appbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="200dp"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
+
+        <!--<android.support.design.widget.CollapsingToolbarLayout-->
+            <!--android:id="@+id/collapsing_toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--custom:contentScrim="?attr/colorPrimary"-->
+            <!--custom:expandedTitleMarginEnd="10dp"-->
+            <!--custom:expandedTitleMarginStart="10dp"-->
+            <!--custom:layout_scrollFlags="scroll|exitUntilCollapsed">-->
+
+            <!--<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"-->
+                <!--android:id="@+id/main_toolbar"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="?attr/actionBarSize"-->
+                <!--android:background="?attr/colorPrimary"-->
+                <!--custom:layout_collapseMode="pin"-->
+                <!--custom:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
+
+            <!--<LinearLayout-->
+                <!--android:id="@+id/main_toolbar_ll"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:layout_marginTop="?attr/actionBarSize"-->
+                <!--android:fitsSystemWindows="true"-->
+                <!--android:orientation="vertical"-->
+                <!--android:paddingTop="10dp"-->
+                <!--custom:layout_collapseMode="parallax"-->
+                <!--custom:layout_collapseParallaxMultiplier="0"-->
+                <!--custom:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"/>-->
+
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
+
+    <!--</android.support.design.widget.AppBarLayout>-->
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:fitsSystemWindows="true"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            custom:contentScrim="?attr/colorPrimary"
-            custom:expandedTitleMarginEnd="10dp"
-            custom:expandedTitleMarginStart="10dp"
-            custom:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            custom:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/main_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                custom:layout_collapseMode="pin"
-                custom:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-            <LinearLayout
-                android:id="@+id/main_toolbar_ll"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="?attr/actionBarSize"
-                android:fitsSystemWindows="true"
-                android:orientation="vertical"
-                android:paddingTop="10dp"
-                custom:layout_collapseMode="parallax"
-                custom:layout_collapseParallaxMultiplier="0"
-                custom:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tipo" />
-
-                    <TextView
-                        android:id="@+id/wizard_ricettaTipo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="PresVet" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Data" />
-
-                    <TextView
-                        android:id="@+id/wizard_ricettaDataPres"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="12/15/2016" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Stato" />
-
-                    <TextView
-                        android:id="@+id/wizard_ricettaStato"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="Iniziale" />
-                </LinearLayout>
-            </LinearLayout>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -140,6 +101,7 @@
                         android:id="@+id/myExcursionPanelLayout"
                         layout="@layout/myexcursion_panel_layout"></include>
 
+
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
@@ -166,7 +128,18 @@
                 </android.support.v7.widget.CardView>
 
 
+
             </LinearLayout>
         <!--</android.support.v4.widget.NestedScrollView>-->
     </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="mini"
+        android:layout_gravity="top|right"
+        android:layout_margin="16dp"/>
 </android.support.design.widget.CoordinatorLayout>
