--- a/app/src/main/res/menu/menu_excursion.xml
+++ b/app/src/main/res/menu/menu_excursion.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
-    android:id="@+id/miCompose"
-    app:showAsAction="ifRoom"
-    android:title="Compose">
+    android:id="@+id/miAddPlace"
+    app:showAsAction="ifRoom|withText"
+    android:title="Segna Punto">
 </item>
 <item
     android:id="@+id/miProfile"
