--- a/app/src/main/res/layout/excursion_layout_activity.xml
+++ b/app/src/main/res/layout/excursion_layout_activity.xml
@@ -65,6 +65,7 @@
 
 
     <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="fill_vertical"
@@ -132,14 +133,25 @@
             </LinearLayout>
         <!--</android.support.v4.widget.NestedScrollView>-->
     </LinearLayout>
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:borderWidth="0dp"-->
+        <!--app:elevation="6dp"-->
+        <!--app:fabSize="normal"-->
+        <!--android:layout_gravity="top|right"-->
+        <!--android:layout_anchorGravity:"@id/coordinator_layout"-->
+        <!--android:layout_margin="16dp"/>-->
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:borderWidth="0dp"
-        app:elevation="6dp"
-        app:fabSize="mini"
-        android:layout_gravity="top|right"
-        android:layout_margin="16dp"/>
+        android:layout_margin="16dp"
+        android:background="#9fff38"
+        custom:fabSize="normal"
+        custom:layout_anchor="@id/main_content"
+        custom:layout_anchorGravity="left" />
+
 </android.support.design.widget.CoordinatorLayout>
