--- a/app/src/main/res/layout/excursion_layout_activity_2.xml
+++ b/app/src/main/res/layout/excursion_layout_activity_2.xml
@@ -31,6 +31,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
+            android:id="@+id/ll2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="fill_vertical"
@@ -73,15 +74,15 @@
             </LinearLayout>
         </LinearLayout>
 
-        <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|right"
-            android:layout_margin="8dp"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:fabSize="mini" />
+            android:layout_margin="16dp"
+            android:background="#9fff38"
+            app:fabSize="normal"
+            app:layout_anchor="@id/ll2"
+            app:layout_anchorGravity="left|bottom" />
         <!--app:headerLayout="@layout/mainmenu_header"-->
     </android.support.design.widget.CoordinatorLayout>
 
@@ -92,4 +93,5 @@
         android:layout_gravity="right"
         app:menu="@menu/mainmenu_drawer"
         />
+
 </android.support.v4.widget.DrawerLayout>
