--- a/app/src/main/res/layout/excursion_layout_activity_2.xml
+++ b/app/src/main/res/layout/excursion_layout_activity_2.xml
@@ -91,7 +91,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="right"
-        app:menu="@menu/mainmenu_drawer"
-        />
+        app:menu="@menu/mainmenu_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
