--- a/app/src/main/res/layout/detail.xml
+++ b/app/src/main/res/layout/detail.xml
@@ -2,24 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/detail_Name"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/detail_Lat"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/detail_Lon"/>
+    <include
+        android:id="@+id/myExcursionPanelLayout"
+        layout="@layout/myexcursion_panel_layout"></include>
+
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="BUTTTAUN"
-        android:id="@+id/detail_Button"/>
+        android:text="Elimina"
+        android:id="@+id/detail_delete_btn"/>
 </LinearLayout>
